@@ -48,3 +48,4 @@ v 1.4:
 	  Enable to allow default Bukkit based permissions to remain enabled, unless directly negated within GroupManager.
 	- Fixed reading world mirrors from the config.
 	- Simplified config.yml while retaining backwards compatibility.
+	- Added data.save.hours setting to config. This allow control over how long backups are retained.
